@@ -45,6 +45,8 @@
 - Bugfix: Proper message output in case of a shell call.
 - Bugfix: Proper handling of dynamic declared class properties with
   PHP forbidden chars.
+- Bugfix: The sorting of the configuration now stay the same as the
+  fallback settings.
 
 2.2.0
 - Added more search pattern and source code parsing to the
